History
=======

0.3 - Unreleased
----------------

0.2 - 2009-06-12
----------------

- Moved from full to safe compression for javascript files.
  [saily]

- Removed unused class attributes for SuperFishViewlet.
  [saily]
  
- Added caching to improve rendering performance.
  [saily]

0.1 - 2009-06-09
----------------

- Initial import and idea  [saily]
